feat: hello triangle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ project(LearnOpenGL)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include(cmake/utils.cmake)
+
 add_subdirectory(${PROJECT_SOURCE_DIR}/vendor/glad)
 add_subdirectory(${PROJECT_SOURCE_DIR}/vendor/glfw)
 
-file(GLOB_RECURSE SRC "src/*.h" "src/*.cc")
-add_executable(LearnOpenGL ${SRC})
-
-target_link_libraries(LearnOpenGL PRIVATE glad glfw)
+create_exec(HelloWorld "src/hello_window.cc")
+create_exec(HelloTriangle "src/hello_triangle.cc")
