feat: shaders homework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,6 @@ create_exec(ShadersInOut "src/shaders/shaders_in_out.cc")
 create_exec(ShadersUniform "src/shaders/shaders_uniform.cc")
 create_exec(ShadersMoreAttributes "src/shaders/shaders_more_attributes.cc")
 create_exec(ShadersShaderClass "src/shaders/shaders_shader_class.cc")
+create_exec(ShadersTriangleUpsideDown "src/shaders/shaders_triangle_upside_down.cc")
+create_exec(ShadersMovingTriangle "src/shaders/shaders_moving_triangle.cc")
+create_exec(ShadersPassAPosAsFragColor "src/shaders/shaders_pass_a_pos_as_frag_color.cc")
