feat: camera homework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,3 +72,5 @@ create_exec(CameraLookAt "src/camera/camera_look_at.cc")
 create_exec(CameraMoveAround "src/camera/camera_move_around.cc")
 create_exec(CameraLookAround "src/camera/camera_look_around.cc")
 create_exec(CameraCameraClass "src/camera/camera_camera_class.cc")
+create_exec(CameraFPSMode "src/camera/camera_fps_mode.cc")
+create_exec(CameraMyOwnLookAt "src/camera/camera_my_own_look_at.cc")
