--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,3 +81,4 @@ create_exec(LightingColor "src/lighting/lighting_color.cc")
 create_exec(LightingBasicLighting "src/lighting/lighting_basic_lighting.cc")
 create_exec(LightingPhongInViewSpace "src/lighting/lighting_phong_in_view_space.cc")
 create_exec(LightingGouraud "src/lighting/lighting_gouraud.cc")
+create_exec(LightingMaterials "src/lighting/materials/lighting_materials.cc")
