feat: lighting materials homework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,3 +82,5 @@ create_exec(LightingBasicLighting "src/lighting/lighting_basic_lighting.cc")
 create_exec(LightingPhongInViewSpace "src/lighting/lighting_phong_in_view_space.cc")
 create_exec(LightingGouraud "src/lighting/lighting_gouraud.cc")
 create_exec(LightingMaterials "src/lighting/materials/lighting_materials.cc")
+create_exec(LightingLightCubeChangeWithLightColor "src/lighting/materials/lighting_light_cube_change_with_light_color.cc")
+create_exec(LightingDisplayOpenGLMaterials "src/lighting/materials/lighting_display_opengl_materials.cc")
