feat: diffuse maps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,3 +84,4 @@ create_exec(LightingGouraud "src/lighting/lighting_gouraud.cc")
 create_exec(LightingMaterials "src/lighting/materials/lighting_materials.cc")
 create_exec(LightingLightCubeChangeWithLightColor "src/lighting/materials/lighting_light_cube_change_with_light_color.cc")
 create_exec(LightingDisplayOpenGLMaterials "src/lighting/materials/lighting_display_opengl_materials.cc")
+create_exec(LightingDiffuseMaps "src/lighting/lighting_maps/lighting_diffuse_maps.cc")
