feat: lighting homework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,3 +85,7 @@ create_exec(LightingMaterials "src/lighting/materials/lighting_materials.cc")
 create_exec(LightingLightCubeChangeWithLightColor "src/lighting/materials/lighting_light_cube_change_with_light_color.cc")
 create_exec(LightingDisplayOpenGLMaterials "src/lighting/materials/lighting_display_opengl_materials.cc")
 create_exec(LightingDiffuseMaps "src/lighting/lighting_maps/lighting_diffuse_maps.cc")
+create_exec(LightingSpecularMaps "src/lighting/lighting_maps/lighting_specular_maps.cc")
+create_exec(LightingInverseSpecularMaps "src/lighting/lighting_maps/lighting_inverse_specular_maps.cc")
+create_exec(LightingFancySpecularMaps "src/lighting/lighting_maps/lighting_fancy_specular_maps.cc")
+create_exec(LightingEmissionMaps "src/lighting/lighting_maps/lighting_emission_maps.cc")
