feat: directional light

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,3 +89,4 @@ create_exec(LightingSpecularMaps "src/lighting/lighting_maps/lighting_specular_m
 create_exec(LightingInverseSpecularMaps "src/lighting/lighting_maps/lighting_inverse_specular_maps.cc")
 create_exec(LightingFancySpecularMaps "src/lighting/lighting_maps/lighting_fancy_specular_maps.cc")
 create_exec(LightingEmissionMaps "src/lighting/lighting_maps/lighting_emission_maps.cc")
+create_exec(LightingDirectionalLight "src/lighting/light_casters/lighting_directional_light.cc")
